# furbox

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml  railgun.py  shared.nix  what.py
.github/: zizmor.yml
.github/workflows/: linting.yml  pr-status-checks.yaml  release-pypi.yaml
furbox/: main.py
furbox/connectors/: cache.py  config.py  downloader.py  e621.py
furbox/helpers/: custom_comic.py  e621_comic.py  utils.py
furbox/models/: config.py  dataclass.py  e621.py  e621_post.py
furbox/runners/: comics.py  e621.py
furbox/utils/: progress_bar.py
src/furbox/: main.py
src/furbox/connectors/: cache.py  downloader.py  e621.py
src/furbox/helpers/: custom_comic.py  e621_comic.py  utils.py
src/furbox/helpers/comic/: custom.py  e621.py
src/furbox/models/: base_model.py  comic.py  config.py  dataclass.py  e621.py
src/furbox/runners/: cli.py  comics.py  e621.py
src/furbox/runners/e621/: __init__.py  download.py  fav_sync.py  sync_favs.py
src/furbox/utils/: cli.py  logging.py  progress_bar.py
tests/models/: test_dataclass.py
