[build-system]
requires = ["setuptools"]

[project]
name = "furbox"
version = "0.1"

description = "Python library for various furry media utilities"
readme = "README.md"

dependencies = [
    "requests",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-annotations",
    "flake8-assertive",
    "flake8-builtins",
    "flake8-bugbear",
    "flake8-commas",
    "flake8-comprehensions",
    "flake8-docstrings",
    "flake8-eradicate",
    "flake8-function-order",
    "flake8-import-order",
    "flake8-todo",
    "pep8-naming",
    "pre-commit",
    "pydoclint",
]

[tool.setuptools]
packages = ["furbox"]

[tool.yamlfix]  # YAML auto-formatter - https://lyz-code.github.io/yamlfix/
allow_duplicate_keys = true
line_length = 120
none_representation = "null"
indent_mapping = 4
indent_offset = 0
indent_sequence = 4
explicit_start = false
preserve_quotes = true
